--- a/.github/workflows/front-dev.yml
+++ b/.github/workflows/front-dev.yml
@@ -26,7 +26,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
+    - name: Install dependencies
+      run: npm ci
+    - name: Build project
+      run: npm run build --if-present
     - run: npm install -g jest
-    - run: npm test
+    - name: Run Jest
+      run: npm test
+    
